fixed footer ui responsiveness and added search box on mobile footer

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  padding-bottom: 5rem;
+  padding-bottom: 3.375rem;
 
   > * {
     flex: 1 1 100%;
@@ -11,11 +10,20 @@
 }
 
 .credits_wrapper {
-  text-align: center;
+  padding: 0 0.75rem;
+  font-size: 0.875rem;
+
+  a {
+    border-bottom: 1px solid #ffffff;
+  }
+
+  span {
+    margin: 0 0.313rem;
+  }
 }
 
 .share_wrapper {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: flex-end;
 
@@ -24,6 +32,10 @@
     font-size: 14px;
     line-height: 17px;
     margin-right: 1.5rem;
+  }
+
+  @media (min-width: 75em) {
+    display: flex;
   }
 }
 
@@ -39,5 +51,17 @@
     &:not(:last-child) {
       margin-right: 0.5rem;
     }
+  }
+}
+
+.footer_mobile {
+  background-color: #545999;
+  padding: 1.063rem 1.563rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  @media (min-width: 75em) {
+    display: none;
   }
 }
